added hyperlink to index and a photo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         This is my app!
-        Login Form
+        <img src="IMG_0550.JPG"/> 
+        <a href="login.html">Login Form</a>
     </body>
 </html>
