resized the photo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         This is my app!
-        <img src="IMG_0550.JPG"/> 
+        <img src="IMG_0550.JPG" width="1200" height="900"/> 
         <a href="login.html">Login Form</a>
     </body>
 </html>
